test-app/ingress-contrl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller

spec:
  replicas: 1  #give replica count = no.of worker nodes
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx
    spec:
      serviceAccountName: ingress-nginx
      containers:
        - name: controller
          image: harbor.bmo.io/bmo-app/ingress-nginx/controller:v1.10.0
          imagePullPolicy: IfNotPresent
          args:
            - /nginx-ingress-controller
            - --election-id=ingress-controller-leader
            - --controller-class=k8s.io/ingress-nginx
            - --ingress-class=nginx
            - --watch-ingress-without-class=false
            - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
            - --enable-ssl-passthrough
            - --enable-metrics=true
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
