test-app/vip-setup-standby.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bmo-app-keepalived
  namespace: bmo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bmo-app-keepalived
  template:
    metadata:
      labels:
        app: bmo-app-keepalived
        bmo-app-vip: "10.10.10.10"
    spec:
      hostNetwork: true
      serviceAccountName: bmo-app-network-flow
      containers:
        - name: bmo-app-keepalived
          image: keepalived:latest
          securityContext:
            privileged: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bmo-app-haproxy
  namespace: bmo-app
